scripts/deploy/kubernetes/nodejs-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-worker-normal-dpl
spec:
  selector:
    matchLabels:
      app: nodejs-worker
      priority: normal
  template:
    metadata:
      labels:
        app: nodejs-worker
        priority: normal
    spec:
      containers:
        - name: nodejs-worker-normal
          image: liscioapps/sphere-backend:1715622773.c579382f
          workingDir: /usr/crowd/app/backend
          command: ['npm']
          args: ['run', 'start:nodejs-worker']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-worker-system-dpl
spec:
  selector:
    matchLabels:
      app: nodejs-worker
      priority: system
  template:
    metadata:
      labels:
        app: nodejs-worker
        priority: system
    spec:
      containers:
        - name: nodejs-worker-system
          image: liscioapps/sphere-backend:1715622773.c579382f
          workingDir: /usr/crowd/app/backend
          command: ['npm']
          args: ['run', 'start:nodejs-worker']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-worker-high-dpl
spec:
  selector:
    matchLabels:
      app: nodejs-worker
      priority: high
  template:
    metadata:
      labels:
        app: nodejs-worker
        priority: high
    spec:
      containers:
        - name: nodejs-worker-high
          image: liscioapps/sphere-backend:1715622773.c579382f
          workingDir: /usr/crowd/app/backend
          command: ['npm']
          args: ['run', 'start:nodejs-worker']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-worker-urgent-dpl
spec:
  selector:
    matchLabels:
      app: nodejs-worker
      priority: urgent
  template:
    metadata:
      labels:
        app: nodejs-worker
        priority: urgent
    spec:
      containers:
        - name: nodejs-worker-urgent
          image: liscioapps/sphere-backend:1715622773.c579382f
          workingDir: /usr/crowd/app/backend
          command: ['npm']
          args: ['run', 'start:nodejs-worker']
