scripts/deploy/kubernetes/search-sync-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-sync-worker-normal-dpl
  labels:
    force-reload: "true"
spec:
  selector:
    matchLabels:
      app: search-sync-worker
      priority: normal
  template:
    metadata:
      labels:
        app: search-sync-worker
        priority: normal
    spec:
      containers:
        - name: search-sync-worker-normal
          image: liscioapps/sphere-search-sync-worker:1715622601.c579382f
          workingDir: /usr/crowd/app/services/apps/search_sync_worker
          command: ["pnpm"]
          args: ["run", "start"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-sync-worker-system-dpl
  labels:
    force-reload: "true"
spec:
  selector:
    matchLabels:
      app: search-sync-worker
      priority: system
  template:
    metadata:
      labels:
        app: search-sync-worker
        priority: system
    spec:
      containers:
        - name: search-sync-worker-system
          image: liscioapps/sphere-search-sync-worker:1715622601.c579382f
          workingDir: /usr/crowd/app/services/apps/search_sync_worker
          command: ["pnpm"]
          args: ["run", "start"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-sync-worker-high-dpl
  labels:
    force-reload: "true"
spec:
  selector:
    matchLabels:
      app: search-sync-worker
      priority: high
  template:
    metadata:
      labels:
        app: search-sync-worker
        priority: high
    spec:
      containers:
        - name: search-sync-worker-high
          image: liscioapps/sphere-search-sync-worker:1715622601.c579382f
          workingDir: /usr/crowd/app/services/apps/search_sync_worker
          command: ["pnpm"]
          args: ["run", "start"]
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-sync-worker-urgent-dpl
  labels:
    force-reload: "true"
spec:
  selector:
    matchLabels:
      app: search-sync-worker
      priority: urgent
  template:
    metadata:
      labels:
        app: search-sync-worker
        priority: urgent
    spec:
      containers:
        - name: search-sync-worker-urgent
          image: liscioapps/sphere-search-sync-worker:1715622601.c579382f
          workingDir: /usr/crowd/app/services/apps/search_sync_worker
          command: ["pnpm"]
          args: ["run", "start"]
