scripts/deploy/kubernetes/workers.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automations-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: automations-worker
  template:
    metadata:
      labels:
        app: automations-worker
    spec:
      containers:
        - name: automations-worker
          image: liscioapps/sphere-automations-worker:1714504030.d322b634
          workingDir: /usr/crowd/app/services/apps/automations_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: cache-worker
  template:
    metadata:
      labels:
        app: cache-worker
    spec:
      containers:
        - name: cache-worker
          image: liscioapps/sphere-cache-worker:1715611356.a54b7ca8
          workingDir: /usr/crowd/app/services/apps/cache_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sink-worker-normal-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: data-sink-worker
      priority: normal
  template:
    metadata:
      labels:
        app: data-sink-worker
        priority: normal
    spec:
      containers:
        - name: data-sink-worker-normal
          image: liscioapps/sphere-data-sink-worker:1714511473.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/data_sink_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sink-worker-system-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: data-sink-worker
      priority: system
  template:
    metadata:
      labels:
        app: data-sink-worker
        priority: system
    spec:
      containers:
        - name: data-sink-worker-system
          image: liscioapps/sphere-data-sink-worker:1714511473.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/data_sink_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sink-worker-high-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: data-sink-worker
      priority: high
  template:
    metadata:
      labels:
        app: data-sink-worker
        priority: high
    spec:
      containers:
        - name: data-sink-worker-high
          image: liscioapps/sphere-data-sink-worker:1714511473.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/data_sink_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sink-worker-urgent-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: data-sink-worker
      priority: urgent
  template:
    metadata:
      labels:
        app: data-sink-worker
        priority: urgent
    spec:
      containers:
        - name: data-sink-worker-urgent
          image: liscioapps/sphere-data-sink-worker:1714511473.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/data_sink_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entity-merging-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: entity-merging-worker
  template:
    metadata:
      labels:
        app: entity-merging-worker
    spec:
      containers:
        - name: entity-merging-worker
          image: liscioapps/sphere-entity-merging-worker:1714524331.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/entity_merging_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-run-worker-normal-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-run-worker
      priority: normal
  template:
    metadata:
      labels:
        app: integration-run-worker
        priority: normal
    spec:
      containers:
        - name: integration-run-worker-normal
          image: liscioapps/sphere-integration-run-worker:1714647258.7352cf6f
          workingDir: /usr/crowd/app/services/apps/integration_run_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-run-worker-system-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-run-worker
      priority: system
  template:
    metadata:
      labels:
        app: integration-run-worker
        priority: system
    spec:
      containers:
        - name: integration-run-worker-system
          image: liscioapps/sphere-integration-run-worker:1714647258.7352cf6f
          workingDir: /usr/crowd/app/services/apps/integration_run_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-run-worker-high-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-run-worker
      priority: high
  template:
    metadata:
      labels:
        app: integration-run-worker
        priority: high
    spec:
      containers:
        - name: integration-run-worker-high
          image: liscioapps/sphere-integration-run-worker:1714647258.7352cf6f
          workingDir: /usr/crowd/app/services/apps/integration_run_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-run-worker-urgent-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-run-worker
      priority: urgent
  template:
    metadata:
      labels:
        app: integration-run-worker
        priority: urgent
    spec:
      containers:
        - name: integration-run-worker-urgent
          image: liscioapps/sphere-integration-run-worker:1714647258.7352cf6f
          workingDir: /usr/crowd/app/services/apps/integration_run_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-stream-worker-normal-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-stream-worker
      priority: normal
  template:
    metadata:
      labels:
        app: integration-stream-worker
        priority: normal
    spec:
      containers:
        - name: integration-stream-worker-normal
          image: liscioapps/sphere-integration-stream-worker:1714757978.e2fe998d
          workingDir: /usr/crowd/app/services/apps/integration_stream_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-stream-worker-system-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-stream-worker
      priority: system
  template:
    metadata:
      labels:
        app: integration-stream-worker
        priority: system
    spec:
      containers:
        - name: integration-stream-worker-system
          image: liscioapps/sphere-integration-stream-worker:1714757978.e2fe998d
          workingDir: /usr/crowd/app/services/apps/integration_stream_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-stream-worker-high-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-stream-worker
      priority: high
  template:
    metadata:
      labels:
        app: integration-stream-worker
        priority: high
    spec:
      containers:
        - name: integration-stream-worker-high
          image: liscioapps/sphere-integration-stream-worker:1714757978.e2fe998d
          workingDir: /usr/crowd/app/services/apps/integration_stream_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-stream-worker-urgent-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-stream-worker
      priority: urgent
  template:
    metadata:
      labels:
        app: integration-stream-worker
        priority: urgent
    spec:
      containers:
        - name: integration-stream-worker-urgent
          image: liscioapps/sphere-integration-stream-worker:1714757978.e2fe998d
          workingDir: /usr/crowd/app/services/apps/integration_stream_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-sync-worker-normal-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-sync-worker
      priority: normal
  template:
    metadata:
      labels:
        app: integration-sync-worker
        priority: normal
    spec:
      containers:
        - name: integration-sync-worker-normal
          image: liscioapps/sphere-integration-sync-worker:1714525295.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/integration_sync_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-sync-worker-system-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-sync-worker
      priority: system
  template:
    metadata:
      labels:
        app: integration-sync-worker
        priority: system
    spec:
      containers:
        - name: integration-sync-worker-system
          image: liscioapps/sphere-integration-sync-worker:1714525295.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/integration_sync_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-sync-worker-high-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-sync-worker
      priority: high
  template:
    metadata:
      labels:
        app: integration-sync-worker
        priority: high
    spec:
      containers:
        - name: integration-sync-worker-high
          image: liscioapps/sphere-integration-sync-worker:1714525295.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/integration_sync_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-sync-worker-urgent-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-sync-worker
      priority: urgent
  template:
    metadata:
      labels:
        app: integration-sync-worker
        priority: urgent
    spec:
      containers:
        - name: integration-sync-worker-urgent
          image: liscioapps/sphere-integration-sync-worker:1714525295.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/integration_sync_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merge-suggestions-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: merge-suggestions-worker
  template:
    metadata:
      labels:
        app: merge-suggestions-worker
    spec:
      containers:
        - name: merge-suggestions-worker
          image: liscioapps/sphere-merge-suggestions-worker:1714527620.0b14e1b4
          workingDir: /usr/crowd/app/services/apps/merge_suggestions_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: profiles-worker
  template:
    metadata:
      labels:
        app: profiles-worker
    spec:
      containers:
        - name: profiles-worker
          image: liscioapps/sphere-profiles-worker:1715611279.a54b7ca8
          workingDir: /usr/crowd/app/services/apps/profiles_worker
          command: ['pnpm']
          args: ['run', 'start']
