scripts/deploy/kubernetes/api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-dpl
  labels:
    force-reload: 'true'
    tags.datadoghq.com/env: prod
    tags.datadoghq.com/service: api
    tags.datadoghq.com/version: 1714527244.0b14e1b4
    admission.datadoghq.com/enabled: "true"
    app.kubernetes.io/component: agent
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: liscioapps/sphere-backend:1715611464.a54b7ca8
          workingDir: /usr/crowd/app/backend
          command: ['npm']
          args: ['run', 'start:api']
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 8080
      targetPort: 8080
