scripts/deploy/kubernetes/frontend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dpl
  labels:
    force-reload: 'false'
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: liscioapps/sphere-frontend:1715652213.eadbad0a
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 8081
      targetPort: 8081
