scripts/deploy/kubernetes/webhook-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-api-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: webhook-api
  template:
    metadata:
      labels:
        app: webhook-api
    spec:
      containers:
        - name: webhook-api
          image: liscioapps/sphere-webhook-api:1715622692.c579382f
          workingDir: /usr/crowd/app/services/apps/webhook_api
          command: ['pnpm']
          args: ['run', 'start']
---
---
apiVersion: v1
kind: Service
metadata:
  name: webhook-api-svc
spec:
  type: ClusterIP
  selector:
    app: webhook-api
  ports:
    - port: 8082
      targetPort: 8082
